--- a/src/app/pessoas/cadastro/cadastro-pessoa/cadastro-pessoa.component.html
+++ b/src/app/pessoas/cadastro/cadastro-pessoa/cadastro-pessoa.component.html
@@ -1,1 +1,24 @@
-<p>cadastro-pessoa works!</p>
+<div class="cadastro-pessoa">
+    <p-stepper (activeStepChange)="proximaEtapa($event)">
+        <ng-container *ngFor="let etapa of etapas">
+            <p-stepperPanel [header]="etapa">
+                <ng-template pTemplate="content" let-prevCallback="prevCallback" let-nextCallback="nextCallback" let-index="index">
+                    <router-outlet></router-outlet>
+
+                    <div class="cadastro-pessoa_buttons">
+                        <p-button 
+                            (onClick)="prevCallback.emit()" 
+                            label="Voltar" 
+                            severity="secondary" 
+                            icon="pi pi-arrow-left" />
+                        <p-button 
+                            label="Próximo" 
+                            icon="pi pi-arrow-right" 
+                            iconPos="right" 
+                            (onClick)="nextCallback.emit()" />
+                    </div>
+                </ng-template>
+            </p-stepperPanel>
+        </ng-container>
+    </p-stepper>
+</div>
