--- a/src/app/pessoas/cadastro/dados-contato-pessoa/dados-contato-pessoa.component.html
+++ b/src/app/pessoas/cadastro/dados-contato-pessoa/dados-contato-pessoa.component.html
@@ -1,1 +1,46 @@
-<p>dados-contato-pessoa works!</p>
+<form [formGroup]="contatoForm" class="form--width">
+    <div class="form-row">
+        <p-floatLabel class="p-fluid" style="width: 100%;">
+            <input 
+                pInputText 
+                id="email" 
+                [placeholder]="emailPlaceholder"
+                [maxlength]="curtoMaxLength"
+                formControlName="email" />
+            <label for="email">E-mail</label>
+        </p-floatLabel>
+    </div>
+
+    <ng-container formArrayName="telefones">
+        <ng-container *ngFor="let telefoneForm of telefones.controls; let i = index">
+            <div class="form-row form-row--margin" [formGroup]="telefoneForm">
+                <p-floatLabel class="p-fluid" style="width: 100%;">
+                    <p-inputMask 
+                        [mask]="telefoneMask"
+                        id="telefone{{i+1}}"
+                        formControlName="telefone"
+                        [maxlength]="telefoneLength"
+                        [placeholder]="telefonePlaceholder" />
+                    <label for="telefone{{i+1}}">Telefone {{ i+1 }}</label>
+                </p-floatLabel>
+
+                <p-button 
+                    *ngIf="exibeBotaoRemoverTelefone()"
+                    icon="pi pi-times" 
+                    [text]="true" 
+                    [rounded]="true"
+                    [plain]="true"
+                    (onClick)="removeTelefone(i)" />
+            </div>
+        </ng-container>
+    </ng-container>
+
+    <p-button 
+        icon="pi pi-plus" 
+        label="Adicionar outro telefone"
+        class="mr-2" 
+        [rounded]="true"
+        [text]="true" 
+        [plain]="true"
+        (onClick)="adicionaTelefone()" />
+</form>
