--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 @import "primeng/resources/primeng.css"; */
 @import "primeicons/primeicons.css"; 
 @import "./app/styles/formulario.css"; 
+
+html, body {
+    height: 100%;
+}
