--- a/src/app/pessoas/cadastro/dados-cadastrais-pessoa/dados-cadastrais-pessoa.component.html
+++ b/src/app/pessoas/cadastro/dados-cadastrais-pessoa/dados-cadastrais-pessoa.component.html
@@ -54,4 +54,13 @@
             <label for="escola">Escola</label>
         </p-floatLabel>
     </div>
+
+    <div class="form_buttons">
+        <p-button 
+            class="form_buttons_avancar"
+            label="Próximo" 
+            icon="pi pi-arrow-right" 
+            iconPos="right" 
+            (onClick)="avancar()" />
+    </div>
 </form>
