--- a/src/app/styles/formulario.css
+++ b/src/app/styles/formulario.css
@@ -11,6 +11,14 @@
     margin-top: 2rem;
 }
 
+.form_buttons {
+    display: flex;
+}
+
+.form_buttons_avancar {
+    margin-left: auto;
+}
+
 @media only screen and (max-width: 768px) {
     .form-row{
         flex-direction: column;
