--- a/src/app/styles/formulario.css
+++ b/src/app/styles/formulario.css
@@ -1,3 +1,11 @@
+.form {
+    margin-top: 2.5rem;
+}
+
+.form--width {
+    width: 60%;
+}
+
 .form-row{
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -24,5 +32,13 @@
         flex-direction: column;
         justify-content: space-between;
         row-gap: 2rem;
+    } 
+
+    .form--width {
+        width: 100%;
+    }
+
+    .form-row--direction{
+        flex-direction: row;
     } 
 }
