--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,22 @@
 <p-dialog class="login-modal" header="Login" [modal]="true" [(visible)]="visible" [draggable]="false" (onHide)="closed.emit()">
     <form [formGroup]="loginForm" class="login-form">
         <p-floatLabel class="login-form_field">
-            <input pInputText id="email" formControlName="email" />
-            <label for="email">E-mail</label>
+            <input 
+                pInputText 
+                id="email" 
+                formControlName="email"
+                [placeholder]="loginFormConfig.placeholders.email" />
+            <label for="email">{{ loginFormConfig.labels.email }}</label>
         </p-floatLabel>
 
         <p-floatLabel class="login-form_field">
-            <p-password id="senha" formControlName="senha" [toggleMask]="true" [feedback]="false" />
-            <label for="senha">Senha</label>
+            <p-password 
+                id="senha" 
+                formControlName="senha" 
+                [placeholder]="loginFormConfig.placeholders.senha" 
+                [toggleMask]="true" 
+                [feedback]="false" />
+            <label for="senha">{{ loginFormConfig.labels.senha }}</label>
         </p-floatLabel>
 
         <p-button class="login-form_button" label="Entrar" (onClick)="login()"/>
