--- a/src/app/pessoas/listagem-pessoas/listagem-pessoas.component.html
+++ b/src/app/pessoas/listagem-pessoas/listagem-pessoas.component.html
@@ -2,46 +2,57 @@
     Adicionar
 </a>
 
-<p-table [value]="pessoas" [tableStyle]="{ 'min-width': '50rem' }">
-    <ng-template pTemplate="caption">
-        <div>
-            Pessoas
-        </div>
-    </ng-template>
+<ng-content *ngIf="possuiPessoas(); else semPessoasTemplate">
+    <p-table [value]="pessoas" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template pTemplate="caption">
+            <div>
+                Pessoas
+            </div>
+        </ng-template>
+    
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Nome</th>
+                <th>CPF</th>
+                <th>E-mail</th>
+                <th>Escola</th>
+                <th>Endereço</th>
+                <th></th>
+            </tr>
+        </ng-template>
+    
+        <ng-template pTemplate="body" let-pessoa>
+            <tr>
+                <td>{{ pessoa.nome }}</td>
+                <td>{{ pessoa.cpf }}</td>
+                <td>{{ pessoa.contato?.email }}</td>
+                <td>{{ pessoa.escola?.nome }}</td>
+                <td>{{ pessoa.endereco?.logradouro }}</td>
+                <td>
+                    <p-button 
+                        icon="pi pi-pencil" 
+                        class="mr-2" 
+                        [rounded]="true"
+                        [text]="true" 
+                        [plain]="true"
+                        (onClick)="editarPessoa(pessoa)" />
+                    <p-button 
+                        icon="pi pi-trash" 
+                        [text]="true" 
+                        [rounded]="true"
+                        [plain]="true"
+                        (onClick)="confirmaExclusao(pessoa)" />
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</ng-content>
 
-    <ng-template pTemplate="header">
-        <tr>
-            <th>Nome</th>
-            <th>CPF</th>
-            <th>E-mail</th>
-            <th>Escola</th>
-            <th>Endereço</th>
-            <th></th>
-        </tr>
-    </ng-template>
+<ng-template #semPessoasTemplate>,
+    <p>Nenhuma pessoa cadastrada até o momento.</p>
+</ng-template>
 
-    <ng-template pTemplate="body" let-pessoa>
-        <tr>
-            <td>{{ pessoa.nome }}</td>
-            <td>{{ pessoa.cpf }}</td>
-            <td>{{ pessoa.contato.email }}</td>
-            <td>{{ pessoa.escola.nome }}</td>
-            <td>{{ pessoa.endereco.logradouro }}</td>
-            <td>
-                <p-button 
-                    icon="pi pi-pencil" 
-                    class="mr-2" 
-                    [rounded]="true"
-                    [text]="true" 
-                    [plain]="true"
-                    (onClick)="editarPessoa()" />
-                <p-button 
-                    icon="pi pi-trash" 
-                    [text]="true" 
-                    [rounded]="true"
-                    [plain]="true"
-                    (onClick)="excluirPessoa()" />
-            </td>
-        </tr>
-    </ng-template>
-</p-table>
+<app-modal-excluir-pessoa
+    #modalExcluirPessoa
+    (excluirPessoa)="excluirPessoa($event)"
+></app-modal-excluir-pessoa>
