style: corrige ortografia

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,5 +17,5 @@
 </ng-content>
 
 <ng-template #notAuthenticatedTemplate>
-    <p>Faça login para acessar as funcionaldiades.</p>
+    <p>Faça login para acessar as funcionalidades.</p>
 </ng-template>
