--- a/src/app/modules/agenda/agenda/agenda.component.css
+++ b/src/app/modules/agenda/agenda/agenda.component.css
@@ -3,12 +3,12 @@
     margin-bottom: 1rem;
     display: flex;
     flex-direction: row;
-    column-gap: 1rem;
+    column-gap: 3rem;
     height: 100%;
 }
 
 .calendar_sidebar{
-    width: 25%;
+    width: fit-content;
     height: 100%;
 }
 
@@ -19,6 +19,10 @@
 
 .calendar_sidebar_input {
     max-width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
 
 ::ng-deep .p-datepicker table {
@@ -36,4 +40,26 @@
     max-width: 100%;
     min-height: 100%;
     max-height: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+    .calendar {
+        flex-direction: column;
+        row-gap: 1rem;
+    }
+    
+    .calendar_sidebar{
+        width: 100%;
+    }
+
+
+    ::ng-deep .p-datepicker table {
+        font-size: 1rem;
+    } 
+    
+    .calendar_container {
+        width: 100%;
+        height: 100%;
+    }
+
 }
